# lab-safety-monitor

./: .gitignore  ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  LICENSE  Problem_Statement.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  START_HERE.md  docker-compose.yml
backend/: .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  start-backend.ps1
backend/api/: routes.py
backend/app/: main.py
backend/app/api/routes/: __init__.py  events.py  stats.py  stream.py
backend/app/core/: config.py  database.py
backend/app/ml/: detector_factory.py  face_recognition.py  hybrid_detector.py  mask_utils.py  person_detector.py  person_gallery.py  pipeline.py  sam2_segmenter.py  sam3_detector.py  sam3_segmenter.py  temporal_filter.py  tracker.py  yolov11_detector.py  yolov8_detector.py
backend/app/models/: event.py  person.py
backend/app/services/: deduplication.py  event_service.py  persistence.py
backend/configs/: ppe_dataset.yaml
backend/database/: connection.py  models.py
backend/models/weights/: .gitkeep
backend/schemas/: __init__.py  schemas.py
backend/scripts/: download_models.py  init_db.py
backend/services/: compliance.py  detection.py  face_recognition.py  tracking.py  video_service.py  websocket_manager.py
frontend/: .npmrc  package-lock.json  package.json  pnpm-lock.yaml  start-frontend.ps1
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: charts.tsx  events-table.tsx  persons-table.tsx  stats-card.tsx  video-player.tsx
(+12 files in other folders)
